--- a/fitlifepro/src/app/component/home/home.component.html
+++ b/fitlifepro/src/app/component/home/home.component.html
@@ -1,42 +1,89 @@
-<header class="main-header">
-  <nav class="main-nav">
-    <ul class="nav-list">
-      <li><a href="#" class="nav-link nav-link-active">Home</a></li>
+<nav class="navbar">
+  <div class="navbar-content">
+    <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/4e5188a6ffa33ceac53e40d44849bdb63fa0d1aea68f686be38a0c0e68f884c5?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Company Logo" class="company-logo" />
+    <ul class="nav-links">
+      <li><a href="home" class="nav-link nav-link-active">Home</a></li>
       <li><a href="#" class="nav-link">About Us</a></li>
       <li><a href="#" class="nav-link">Contact Us</a></li>
       <li><a href="#" class="nav-link">Category</a></li>
       <li><a href="#" class="nav-link">Blogs</a></li>
-      <li><a href="#" class="nav-link">Recipes</a></li>
+      <li><a href="" class="nav-link">Recipes</a></li>
     </ul>
-  </nav>
-  <div class="header-actions">
-    <a href="#" class="btn btn-secondary">Gift A Plan</a>
-    <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/c40b77d621b039aa88ee37d9cd9f5caec0dae5a1264a5efa1db08d71e3b7e247?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Gift icon" class="gift-icon" />
-  </div>
-  <div class="auth-actions">
-    <a href="#" class="btn btn-link">Login</a>
-    <a href="#" class="btn btn-primary">Sign up</a>
-  </div>
-</header>
+    <div class="nav-actions">
+      <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/c40b77d621b039aa88ee37d9cd9f5caec0dae5a1264a5efa1db08d71e3b7e247?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Gift icon" class="gift-icon" />
 
+      <a href="#" class="nav-link">Gift A Plan</a>
+      <button class="cart-button" aria-label="Shopping Cart">
+        <span class="visually-hidden">Shopping Cart</span>
+      </button>
+      <a href="#" class="nav-button">Login</a>
+      <a href="#" class="nav-button">Sign up</a>
+    </div>
+  </div>
+</nav>
 <main>
-  <section class="hero-section">
-    <h1 class="hero-title">
-      Get Your Perfect Workout <br />
-      With The <span class="highlight">Perfect</span> <span class="highlight">Trainers</span>
-    </h1>
-    <div class="trainer-images">
-      <div class="image-column">
-        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/7ac9adee125e76f334ac744b15fe2e8eb1a09e500d8e9e003c2d5b9952d35068?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Trainer 1" class="trainer-image" />
-        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/f94527b54cd3227d183c21714ad53a3ffb24f806a8c7ac26181087300985e204?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Trainer 2" class="trainer-image" />
+
+  <section class="workout-section">
+    <div class="hero-container">
+      <h1 class="hero-title">
+        Get Your Perfect Workout <br />
+        With The <span style="color: #fed233">Perfect</span> <span style="color: #fed233">Trainers</span>
+      </h1>
+      <div class="trainers-grid">
+        <div class="trainers-row">
+          <div class="trainer-column">
+            <div class="trainer-images">
+              <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/7ac9adee125e76f334ac744b15fe2e8eb1a09e500d8e9e003c2d5b9952d35068?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Trainer Icon" class="trainer-icon" />
+              <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/f94527b54cd3227d183c21714ad53a3ffb24f806a8c7ac26181087300985e204?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Trainer Photo" class="trainer-photo" />
+            </div>
+          </div>
+          <div class="main-trainer-column">
+            <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/7b53e7a758ea10db6cb5a8e3673fb8370625c6920398b6f1875e056228b7f428?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Main Trainer Photo" class="main-trainer-photo" />
+          </div>
+          <div class="trainer-column">
+            <div class="trainer-images">
+              <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/855119a9d1139344466fafa51885fdcd4598aa42649ee112ccbdfc6c475657da?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Trainer Icon" class="trainer-icon" />
+              <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/19505f22d4174239f7b6640be2c095aefd54f479cac2c4a1a24d54c303133f41?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Trainer Photo" class="trainer-photo" />
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="image-column">
-        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/7b53e7a758ea10db6cb5a8e3673fb8370625c6920398b6f1875e056228b7f428?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Trainer 3" class="trainer-image large" />
-      </div>
-      <div class="image-column">
-        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/855119a9d1139344466fafa51885fdcd4598aa42649ee112ccbdfc6c475657da?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Trainer 4" class="trainer-image" />
-        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/19505f22d4174239f7b6640be2c095aefd54f479cac2c4a1a24d54c303133f41?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Trainer 5" class="trainer-image" />
-      </div>
+      <section class="about-section">
+        <div class="about-content">
+          <div class="about-text-column">
+            <div class="about-text-wrapper">
+              <h2 class="about-title">
+                <span style="color: #8ea1b3">What Is</span>
+                <span style="color: #fed233"> Evolve Your Lifestyle </span>
+              </h2>
+              <p class="about-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam, tortor sollicitudin egestas convallis.
+              </p>
+              <div class="about-details">
+                <div class="about-details-row">
+                  <div class="about-details-column">
+                    <div class="about-details-text">
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam, tortor sollicitudin egestas convallis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam, tortor sollicitudin egestas convallis.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      </p>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam, tortor sollicitudin egestas convallis. Lorem ipsum dolor sit amet,
+                      </p>
+                      <button class="contact-button">Contact Us</button>
+                    </div>
+                  </div>
+                  <div class="about-image-column">
+                    <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/5b8e02bfda896ff25065fc15267d29e072a45eb4d5204d11c57f1ef4360c71ec?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="About Us Image" class="about-image" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="accent-column">
+            <div class="accent-block"></div>
+          </div>
+        </div>
+      </section>
     </div>
   </section>
 
